--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+    
+    <style></style>
 
   </head>
   <body>
-    <h1>Title</h1>
+    <h1>Javeera's Portfolio</h1>
     <script src="cardioid.js"></script>
   </body>
 </html>
