--- a/html/beaver.html
+++ b/html/beaver.html
@@ -11,7 +11,7 @@
   </head>
   <body>
   
-  <script src="beaver.js"></script>
+  <script src="../java/beaver.js"></script>
   
   </body>
   </head>
