--- a/html/creatures.html
+++ b/html/creatures.html
@@ -11,7 +11,7 @@
   </head>
   <body>
   
-  <script src="creatures.js"></script>
+  <script src="../java/creatures.js"></script>
   
   </body>
   </head>
