--- a/html/memory.html
+++ b/html/memory.html
@@ -11,7 +11,7 @@
   </head>
   <body>
   
-  <script src="memory.js"></script>
+  <script src="../java/memory.js"></script>
   
   </body>
   </head>
