--- a/html/cardioid.html
+++ b/html/cardioid.html
@@ -10,6 +10,6 @@
 
   </head>
   <body>
-    <script src="../java/cardioid.js"></script>
+    <script src="./java/cardioid.js"></script>
   </body>
 </html>
