--- a/study.html
+++ b/study.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="study/style.css">
     
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
@@ -32,22 +32,22 @@
   <div id="welcome" class="blue1">Welcome to...</div>
   <br>
   <!-- Outputting logo that links to calendar -->
-  <div class="title"><a href="calendar.html" ><img src="https://cdn.glitch.com/9e79dc37-7310-4e61-a25a-ebd17073c3c6%2FUntitled156_20191210220750.png?v=1576040172222"></a></div>
+  <div class="title"><a href="study/calendar.html" ><img src="https://cdn.glitch.com/9e79dc37-7310-4e61-a25a-ebd17073c3c6%2FUntitled156_20191210220750.png?v=1576040172222"></a></div>
   <br>
   <!-- Outputting button that links to calendar-->
-  <div class="locations"><a style="color:white; background-color:#095191;" class="button" href="calendar.html" >Calendar</a></div>
+  <div class="locations"><a style="color:white; background-color:#095191;" class="button" href="study/calendar.html" >Calendar</a></div>
   <br>
   <!-- Outputting button that links to calculator -->
-  <div class="locations"><a style="color:white; background-color:#0c80b2;" class="button" href="calculator.html" >Calculator</a></div>
+  <div class="locations"><a style="color:white; background-color:#0c80b2;" class="button" href="study/calculator.html" >Calculator</a></div>
   <br>
   <!-- Outputting button that links to the notes page -->
-  <div class="locations"><a style="color:white; background-color:#0099dc;" class="button" href="notebook.html" >Notebook</a></div>
+  <div class="locations"><a style="color:white; background-color:#0099dc;" class="button" href="study/notebook.html" >Notebook</a></div>
   <br>
   <!-- Outputting button that links to about page -->
-  <div class="locations"><a type="button" style="color:white; background-color:#37b7f0;" class="button" href="about.html" >About</a></div>
+  <div class="locations"><a type="button" style="color:white; background-color:#37b7f0;" class="button" href="study/about.html" >About</a></div>
   <br>
   <!-- Outputting button that links to bunny page -->
-  <div class="locations"><a type="button" style="color:white; background-color:#62d2f5;" class="button" href="bunnies.html" >Destress Bunnies</a></div>
+  <div class="locations"><a type="button" style="color:white; background-color:#62d2f5;" class="button" href="study/bunnies.html" >Destress Bunnies</a></div>
   <br>
   <div id="themeChange">
     <a type="button" style="color:white; background-color:#a5dff1" class="button">
