--- a/study/about.html
+++ b/study/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="study/style.css">
     
     <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
+    <script src="study/script.js" defer></script>
   </head>  
 
 <body class="whiteBackground"></body>
