--- a/study/bunnies.html
+++ b/study/bunnies.html
@@ -9,10 +9,10 @@
 <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="study/style.css">
+    <link rel="stylesheet" href="style.css">
     
     <!-- import the webpage's javascript file -->
-    <script src="study/script.js" defer></script>
+    <script src="script.js" defer></script>
   </head>  
 
   <!-- theme -->
@@ -21,7 +21,7 @@
 
 <main>
   <!-- the home button -->
-  <div><a href="study/index.html" class="button">Home</a></div>
+  <div><a href="index.html" class="button">Home</a></div>
   <!-- logo -->  
   <div style="position:absolute;float:right;"><img alt="Study Buny" height="60" width="60" src="https://cdn.glitch.com/9e79dc37-7310-4e61-a25a-ebd17073c3c6%2FUntitled156_20191210220750.png?v=1576040172222"></div>
   <div class="pageTitle blue2">Destress Bunnies</div> <br><br><br><br>
