--- a/html/rose.html
+++ b/html/rose.html
@@ -10,6 +10,10 @@
 
   </head>
   <body>
+    <h2>Mathimatical Rose Patter</h2><br>
+    <p> pattern is made by  x / y </p><br>
     <script src="../java/rose.js"></script>
+    <br>
+    <p>         x            y          radius        line thickness </p>
   </body>
 </html>
