--- a/html/beaver.html
+++ b/html/beaver.html
@@ -11,6 +11,11 @@
   </head>
   <body>
   
+  <h2>Beaver Jump Game</h2> <br>
+  <p>Press space to jump.</p><br>
+  <p>Collect 15 sticks to win!</p><br>
+  <p>Make sure to avoid the red virus.</p><br>
+  <p>Good Luck and Have fun!</p><br><br>
   <script src="../java/beaver.js"></script>
   
   </body>
