--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <h2>Algorithms</h2>
     <p><a href="algorithms.html">View</a></p>
     <br>
+    
+    <h2>Games & Visualizations</h2>
+    <p><a href="games.html">View</a></p>
+    <br>
       
     <h2>AP Computer Science</h2>
     <p><a href="ap.html">View</a></p>
