--- a/games.html
+++ b/games.html
@@ -12,11 +12,11 @@
   <body>
   
     <h2>Beaver Game</h2>
-    <p><a href="beaver.html">View</a></p>
+    <p><a href="html/beaver.html">View</a></p>
     <br>
     
     <h2>Memory Game</h2>
-    <p><a href="memory.html">View</a></p>
+    <p><a href="html/memory.html">View</a></p>
     <br>
   </body>
   </head>
