--- a/html/beaver.html
+++ b/html/beaver.html
@@ -16,7 +16,8 @@
   <p>Collect 15 sticks to win!</p><br>
   <p>Make sure to avoid the red virus.</p><br>
   <p>Good Luck and Have fun!</p><br><br>
-  <script src="../java/beaver.js"></script>
+    <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-hoppy-beaver-extreme/6301579182833664/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+  <!--<script src="../java/beaver.js"></script>-->
   
   </body>
 </html>
