--- a/html/memory.html
+++ b/html/memory.html
@@ -12,7 +12,8 @@
   <body>
   
     <h2>Memory Card Game</h2> <br>
-  <script src="../java/memory.js"></script>
+    <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-memory/6090899158695936/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+  <!--<script src="../java/memory.js"></script>-->
   
   </body>
 </html>
