--- a/intro.html
+++ b/intro.html
@@ -17,6 +17,27 @@
     <h2>Fish Tank</h2>
     <p><a href="html/fish.html">View</a></p>
     <br>
+    <h2>Shooting Star</h2>
+    <p><a href="html/star.html">View</a></p>
+    <br>
+    <h2>What's for Dinner?</h2>
+    <p><a href="html/dinner.html">View</a></p>
+    <br>
+    <h2>Animal attack</h2>
+    <p><a href="html/animal.html">View</a></p>
+    <br>
+    <h2>Ad Design</h2>
+    <p><a href="html/ad.html">View</a></p>
+    <br>
+    <h2>Magic 8-Ball</h2>
+    <p><a href="html/ball.html">View</a></p>
+    <br>
+    <h2>Build-a-House</h2>
+    <p><a href="html/house.html">View</a></p>
+    <br>
+    <h2>Make it Rain</h2>
+    <p><a href="html/rain.html">View</a></p>
+    <br>
   
   </body>
   </head>
