--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   </head>
   <body>
-    <h1>Javeera's Portfolio</h1>
+    <h1>Javeera's Portfolio!</h1>
     <br><br>
     
     <h2>Live Coding</h2>
