--- a/natural.html
+++ b/natural.html
@@ -16,6 +16,9 @@
     <h2>Creatures</h2>
     <p><a href="creatures.html">View</a></p>
     <br>
+    <h2>Asteriods spaceship</h2>
+    <p><a href="spaceship.html">View</a></p>
+    <br>
   
   </body>
   </head>
