--- a/html/rain.html
+++ b/html/rain.html
@@ -13,7 +13,8 @@
   <body>
   
     <h2>Make it rain!</h2> <br>
-    <script src="../java/rain.js"></script>
+    <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-make-it-rain/6269897398517760/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+   <!-- <script src="../java/rain.js"></script> -->
   
   </body>
 </html>
