--- a/html/house.html
+++ b/html/house.html
@@ -13,7 +13,8 @@
   <body>
   
     <h2>Build a House</h2> <br>
-    <script src="../java/house.js"></script>
+    <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-build-a-house/5585530665795584/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+    <!-- <script src="../java/house.js"></script> -->
   
   </body>
 </html>
