--- a/html/shapeship.html
+++ b/html/shapeship.html
@@ -13,8 +13,8 @@
   <body>
   
     <h2>Asteroids spaceship</h2> <br>
-    <!-- <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-asteroids-spaceship/6641240010358784/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script> -->
-    <script src="../java/shapeship.js"></script>
+    <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-asteroids-spaceship/6641240010358784/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+    <!-- <script src="../java/shapeship.js"></script> -->
   
   </body>
 </html>
