--- a/cube.html
+++ b/cube.html
@@ -12,7 +12,13 @@
   </head>
   <body>
   
-  <h1>Pyraminx Duo</h1>
+  <h1>Pyraminx Duo</h1><br>
+    
+    <!-- insert video here -->
+    
+  <div>
+    <p> My fastest time for solving a pyraminx duo:  3.854 seconds </p>  
+  </div>
   
   </body>
   </head>
