--- a/cube.html
+++ b/cube.html
@@ -15,7 +15,8 @@
   <h1>Pyraminx Duo</h1><br>
     
     <!-- insert video here -->
-    
+    <!-- https://youtu.be/hAFw0pBMPck -->
+    [![Pyraminx Duo](../images/cube.JPG)](https://youtu.be/hAFw0pBMPck)
   <div>
     <p> My fastest time for solving a pyraminx duo:  3.854 seconds </p>  
   </div>
