--- a/cube.html
+++ b/cube.html
@@ -16,7 +16,7 @@
     
     <!-- insert video here -->
     <!-- https://youtu.be/hAFw0pBMPck -->
-    [![Pyraminx Duo](../images/cube.JPG)](https://youtu.be/hAFw0pBMPck)
+    <script>[![Pyraminx Duo](../images/cube.JPG)](https://youtu.be/hAFw0pBMPck)</script>
   <div>
     <p> My fastest time for solving a pyraminx duo:  3.854 seconds </p>  
   </div>
