--- a/cube.html
+++ b/cube.html
@@ -16,7 +16,8 @@
     
     <!-- insert video here -->
     <!-- https://youtu.be/hAFw0pBMPck -->
-    <script>[![Pyraminx Duo](../images/cube.JPG)](https://youtu.be/hAFw0pBMPck)</script>
+    <!-- <script>[![Pyraminx Duo](../images/cube.JPG)](https://youtu.be/hAFw0pBMPck)</script> -->
+    <iframe width="727" height="409" src="https://www.youtube.com/embed/hAFw0pBMPck" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <div>
     <p> My fastest time for solving a pyraminx duo:  3.854 seconds </p>  
   </div>
