--- a/cube.html
+++ b/cube.html
@@ -12,7 +12,7 @@
   </head>
   <body>
   
-  <h1>Pyraminx Duo</h1><br>
+  <h1>Pyraminx Duo.</h1><br>
     
     <!-- insert video here -->
     <!-- https://youtu.be/hAFw0pBMPck -->
