--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -13,6 +13,7 @@
   <body>
   
   <h1>FreeCodeCamp</h1>
-  
+  <img src="https://raw.githubusercontent.com/SpaceSquibble/website-test/master/images/freecodecamp.JPG">
+    
   </body>
   </head>
