--- a/html/star.html
+++ b/html/star.html
@@ -13,7 +13,9 @@
   <body>
   
     <h2>Shooting Star</h2> <br>
-    <script src="../java/star.js"></script>
+    <img src="https://raw.githubusercontent.com/SpaceSquibble/website-test/master/images/star.gif">
+    <!--<script src="../java/star.js"></script>-->
+    
   
   </body>
 </html>
