--- a/html/beaver.html
+++ b/html/beaver.html
@@ -12,10 +12,11 @@
   <body>
   
   <h2>Beaver Jump Game</h2> <br>
-  <p>Press space to jump.</p><br>
-  <p>Collect 15 sticks to win!</p><br>
-  <p>Make sure to avoid the red virus.</p><br>
-  <p>Good Luck and Have fun!</p><br><br>
+  <p>Press space to jump.</p>
+  <p>Collect 15 sticks to win!</p>
+  <p>Make sure to avoid the red virus.</p>
+  <p>Good Luck and Have fun!</p>
+    <p>Scroll down to Play</p><br>
     <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-hoppy-beaver-extreme/6301579182833664/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
   <!--<script src="../java/beaver.js"></script>-->
   
