--- a/natural.html
+++ b/natural.html
@@ -19,6 +19,8 @@
     <h2>Asteriods spaceship</h2>
     <p><a href="spaceship.html">View</a></p>
     <br>
-  
+    <h2>Paint Splatter</h2>
+    <p><a href="html/paint.html">View</a></p>
+    <br>
   </body>
   </head>
