--- a/html/ad.html
+++ b/html/ad.html
@@ -13,7 +13,8 @@
   <body>
   
     <h2>Ad Design</h2> <br>
-    <script src="../java/ad.js"></script>
+    <img src="https://raw.githubusercontent.com/SpaceSquibble/website-test/master/images/ad.gif">
+    <!--<script src="../java/ad.js"></script>-->
   
   </body>
 </html>
