--- a/html/shapeship.html
+++ b/html/shapeship.html
@@ -13,6 +13,14 @@
   <body>
   
     <h2>Asteroids spaceship</h2> <br>
+    <p> Hello and welcome to my program! :)</p><br>
+    <p>   Controls: </p>
+    <p>     Left Arrow Key:    Rotate Left</p>
+    <p>     Right Arrow Key:   Rotate Right</p>
+    <p>     Z:                 Zoooooom</p>
+    <p>     Up Arrow Key:      ???</p>
+    <p>     Down Arrow Key:    ???</p><br>
+    <p>I hope you like it!! </p> <br>
     <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-asteroids-spaceship/6641240010358784/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
     <!-- <script src="../java/shapeship.js"></script> -->
   
