--- a/natural.html
+++ b/natural.html
@@ -14,10 +14,10 @@
   <h1>Natural Simulations</h1>
   
     <h2>Creatures</h2>
-    <p><a href="creatures.html">View</a></p>
+    <p><a href="html/creatures.html">View</a></p>
     <br>
     <h2>Asteriods spaceship</h2>
-    <p><a href="spaceship.html">View</a></p>
+    <p><a href="html/spaceship.html">View</a></p>
     <br>
     <h2>Paint Splatter</h2>
     <p><a href="html/paint.html">View</a></p>
