--- a/html/shapeship.html
+++ b/html/shapeship.html
@@ -21,7 +21,7 @@
     <p>     Up Arrow Key:      ???</p>
     <p>     Down Arrow Key:    ???</p><br>
     <p>I hope you like it!! </p> <br>
-    <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-asteroids-spaceship/6641240010358784/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+    <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-asteroids-spaceship/6641240010358784/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <!-- <script src="../java/shapeship.js"></script> -->
   
   </body>
