--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   </head>
   <body>
-    <image src="images/title.png">
+    <image src="images/title2.png">
     <br><br>
     
     <h2>Live Coding</h2>
