--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
     
+    <link rel="icon" sizes="180x180" href="images/favicon/logo100.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/logo32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/logo16.png">
+    
     <style></style>
 
   </head>
