--- a/html.html
+++ b/html.html
@@ -14,6 +14,7 @@
   
   <h1>Introduction to HTML and CSS</h1>
   
+    <image id="cover" src="images/recipeCover.JPG">  
     <h2>Recipe Book</h2>
     <p><a href="html/recipe.html">View</a></p>
     <br>
