--- a/algorithms.html
+++ b/algorithms.html
@@ -14,12 +14,12 @@
   
   <h1>Algorithms</h1>
   
-    <image id="cover" src="images/fishCover.gif">  
+    <image class="cover" src="images/fishCover.gif">  
     <h2>Recursive Art</h2>
     <p><a href="html/art.html">View</a></p>
     <br>
   
-    <image id="cover" src="images/sortCover.JPG">  
+    <image class="cover" src="images/sortCover.JPG">  
     <h2>Selection Sort</h2>
     <p><a href="html/sort.html">View</a></p>
   </body>
