--- a/games.html
+++ b/games.html
@@ -11,12 +11,12 @@
   </head>
   <body>
   
-    <image id="cover" src="images/beaverCover.gif">  
+    <image class="cover" src="images/beaverCover.gif">  
     <h2>Beaver Game</h2>
     <p><a href="html/beaver.html">View</a></p>
     <br>
     
-    <image id="cover" src="images/memoryCover.gif">  
+    <image class="cover" src="images/memoryCover.gif">  
     <h2>Memory Game</h2>
     <p><a href="html/memory.html">View</a></p>
     <br>
