--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   </head>
   <body>
-    <p>HI IM A TEST!!!!!</p>
+    <p>HI IM A TEST</p>
     <image src="images/title2.png">
     <br><br>
     
