--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p><a href="livecoding.html">View</a></p>
     <br>
       
-    <image class="cover" src="images/studyCover.JPG">
+    <image class="cover" src="images/studyCover.JPG" width="400px">
     <h2>Study Bunny</h2>
     <p><a href="study.html">View</a></p>
     <br>
