--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <p><a href="natural.html">View</a></p>
     <br>
       
-    <image class="cover" src="images/cardioidCover.JPG">  <br>  
+    <image class="cover" src="images/cardioidCover.gif">  <br>  
     <h2>Algorithms</h2>
     <p><a href="algorithms.html">View</a></p>
     <br>
