--- a/intro.html
+++ b/intro.html
@@ -34,7 +34,7 @@
     <p><a href="html/animal.html">View</a></p>
     <br>
         
-    <image id="cover" src="images/adCover.gif">  
+    <image class="cover" src="images/adCover.gif">  
     <h2>Ad Design</h2>
     <p><a href="html/ad.html">View</a></p>
     <br>
@@ -45,7 +45,7 @@
     <br>
         
     <image class="cover" src="images/rainCover.gif">  
-    <h2>Make iclasst Rain</h2>
+    <h2>Make it Rain</h2>
     <p><a href="html/rain.html">View</a></p>
     <br>
   
