--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p><a href="intro.html">View</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       
-    <image class="cover" src="images/recipeCover.JPG">
+    <image class="cover" src="images/recipeCover.JPG" width="400">
     <div class="summary">  
     <h2>Intro to HTML/CSS</h2>
     <p><a href="html.html">View</a></p>
