--- a/algorithms.html
+++ b/algorithms.html
@@ -11,16 +11,20 @@
 
   </head>
   <body>
-  
+    
+  <br><br>
   <h1>Algorithms</h1>
-  
+  <br>
+    <div class="summary">
     <image class="cover" src="images/fishCover.gif">  
     <h2>Recursive Art</h2>
     <p><a href="html/art.html">View</a></p>
-    <br>
+    </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   
+    <div class="summary">  
     <image class="cover" src="images/sortCover.JPG">  
     <h2>Selection Sort</h2>
     <p><a href="html/sort.html">View</a></p>
+    </div><br><br>
   </body>
   </head>
