--- a/html.html
+++ b/html.html
@@ -11,13 +11,14 @@
 
   </head>
   <body>
-  
+    <br><br>
   <h1>Introduction to HTML and CSS</h1>
   
     <image class="cover" src="images/recipeCover.JPG">  
+    <div class="summary">
     <h2>Recipe Book</h2>
     <p><a href="html/recipe.html">View</a></p>
-    <br>
+    </div><br><br>
   
   </body>
   </head>
