--- a/ap.html
+++ b/ap.html
@@ -12,7 +12,10 @@
   </head>
   <body>
   
+  <br><br>
   <h1>Advanced Placement Computer Science</h1>
+  <br>
+  <img id="bigImage" src="images/khanacademy.JPG">
 
   
   </body>
