--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
     <style></style>
 
   </head>
-  <body>
-    <p>u w u</p>
-    
-    <image src="images/title2.png">
+  <body>   
+    <image src="images/title2.png"> <br><br>
     
     <image class="cover" src="images/cardioidCover.gif">
     <div class="summary">
