--- a/livecoding.html
+++ b/livecoding.html
@@ -17,13 +17,13 @@
     <image class="cover" src="images/cardioidCover.gif">  
     <div class="summary">
     <h2>Cardioid Visualization</h2>
-    <p><a href="html/cardioid.html"> View</a></p>
+    <p><a href="html/cardioid.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       
-    <image class="cover" src="images/roseCover.JPG">  
+    <image class="cover" src="images/roseCover.JPG" width="400">  
     <div class="summary">
     <h2>Rose Art<h2>
-    <p><a href="html/rose.html"> View</a></p>
+    <p><a href="html/rose.html"> View ⇒</a></p>
     </div> <br><br>
     
   </body>
