--- a/algorithms.html
+++ b/algorithms.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
     
+    <link rel="icon" sizes="180x180" href="images/favicon/logo100.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/logo32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/logo16.png">
+    
     <style></style>
 
   </head>
@@ -19,13 +23,13 @@
     <image class="cover" src="images/fishCover.gif">  
     <div class="summary">
     <h2>Recursive Art</h2>
-    <p><a href="html/art.html">View</a></p>
+    <p><a href="html/art.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   
     <image class="cover" src="images/sortCover.JPG">  
     <div class="summary">  
     <h2>Selection Sort</h2>
-    <p><a href="html/sort.html">View</a></p>
+    <p><a href="html/sort.html"> View ⇒</a></p>
     </div><br><br>
   </body>
   </head>
