--- a/html/star.html
+++ b/html/star.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-  
+  <image src="images/title3.png"> <br><br>
     <h2>Shooting Star</h2> <br>
     <img src="https://raw.githubusercontent.com/SpaceSquibble/website-test/master/images/star.gif">
     <!--<script src="../java/star.js"></script>-->
