--- a/html/fish.html
+++ b/html/fish.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-  
+  <image src="images/title3.png"> <br><br>
     <h2>Fish Tank</h2> <br>
     <script src="../java/fish.js"></script>
   
