--- a/html/ball.html
+++ b/html/ball.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-  
+  <image src="images/title3.png"> <br><br>
     <h2>Magic 8 Ball</h2> <br>
     <script src="../java/ball.js"></script>
   
