--- a/html/cardioid.html
+++ b/html/cardioid.html
@@ -10,6 +10,8 @@
 
   </head>
   <body>
+    <image src="images/title3.png"> <br><br>
+    <h2>Cardioid Visualization</h2><br>
     <script src="../java/cardioid.js"></script>
   </body>
 </html>
