--- a/html/beaver.html
+++ b/html/beaver.html
@@ -10,7 +10,7 @@
 
   </head>
   <body>
-  
+  <image src="images/title3.png"> <br><br>
   <h2>Beaver Jump Game</h2> <br>
   <p>Press space to jump.</p>
   <p>Collect 15 sticks to win!</p>
