--- a/html/art.html
+++ b/html/art.html
@@ -10,8 +10,8 @@
 
   </head>
   <body>
-  
-  <h2>Recursive Art</h2>
+  <image src="images/title3.png"> <br><br>
+  <h2>Recursive Art</h2><br>
   <script src="../java/art.js"></script>
   
   </body>
