--- a/html/ad.html
+++ b/html/ad.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-    <image src="images/title3.png"> <br><br>
+    <image src="../images/title3.png"> <br><br>
     <h2>Ad Design</h2> <br>
     <img src="https://raw.githubusercontent.com/SpaceSquibble/website-test/master/images/ad.gif">
     <!--<script src="../java/ad.js"></script>-->
