--- a/html/animal.html
+++ b/html/animal.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-  <image src="images/title3.png"> <br><br>
+  <image src="../images/title3.png"> <br><br>
     <h2>Animal Attack</h2> <br>
     <script src="../java/animal.js"></script>
   
