--- a/html/art.html
+++ b/html/art.html
@@ -10,7 +10,7 @@
 
   </head>
   <body>
-  <image src="images/title3.png"> <br><br>
+  <image src="../images/title3.png"> <br><br>
   <h2>Recursive Art</h2><br>
   <script src="../java/art.js"></script>
   
