--- a/html/cardioid.html
+++ b/html/cardioid.html
@@ -10,7 +10,7 @@
 
   </head>
   <body>
-    <image src="images/title3.png"> <br><br>
+    <image src="../images/title3.png"> <br><br>
     <h2>Cardioid Visualization</h2><br>
     <script src="../java/cardioid.js"></script>
   </body>
