--- a/html/creatures.html
+++ b/html/creatures.html
@@ -10,7 +10,7 @@
 
   </head>
   <body>
-  <image src="images/title3.png"> <br><br>
+  <image src="../images/title3.png"> <br><br>
   <h2>Ecosystem</h2> <br>
   <script src="../java/creatures.js"></script>
   
