--- a/html/dinner.html
+++ b/html/dinner.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-  <image src="images/title3.png"> <br><br>
+  <image src="../images/title3.png"> <br><br>
     <h2>What's for dinner?</h2> <br>
     <script src="../java/dinner.js"></script>
   
