--- a/html/fish.html
+++ b/html/fish.html
@@ -11,9 +11,8 @@
 
   </head>
   <body>
-  <image src="images/title3.png"> <br><br>
+  <image src="../images/title3.png"> <br><br>
     <h2>Fish Tank</h2> <br>
     <script src="../java/fish.js"></script>
-  
   </body>
 </html>
