--- a/html/memory.html
+++ b/html/memory.html
@@ -10,7 +10,7 @@
 
   </head>
   <body>
-  <image src="images/title3.png"> <br><br>
+  <image src="../images/title3.png"> <br><br>
     <h2>Memory Card Game</h2> <br>
     <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-memory/6090899158695936/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
   <!--<script src="../java/memory.js"></script>-->
