--- a/html/paint.html
+++ b/html/paint.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-  <image src="images/title3.png"> <br><br>
+  <image src="../images/title3.png"> <br><br>
     <h2>Paint Splatter</h2> <br>
     <script src="../java/paint.js"></script>
   
