--- a/html/recipe.html
+++ b/html/recipe.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Project: Recipe book</title>
         <meta charset="utf-8">
         <style>
             body {
@@ -39,7 +38,7 @@
         </style>
     </head>
     <body>
-       
+       <img src="../images/title3.png"><br><br>
         <h1>Javeera's Recipe Book</h1>
         
         <img id="logo" src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Lilium_wallichianum.jpg">
