--- a/html/rose.html
+++ b/html/rose.html
@@ -10,7 +10,7 @@
 
   </head>
   <body>
-    <image src="images/title3.png"> <br><br>
+    <image src="../images/title3.png"> <br><br>
     <h2>Mathimatical Rose Patter</h2><br>
     <p> pattern is made by  x / y </p><br>
     <script src="../java/rose.js"></script>
