--- a/html/shapeship.html
+++ b/html/shapeship.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-  <image src="images/title3.png"> <br><br>
+  <image src="../images/title3.png"> <br><br>
     <h2>Asteroids spaceship</h2> <br>
     <p> Hello and welcome to my program! :)</p><br>
     <p>   Controls: </p>
