--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       
     <image class="cover" src="images/cubeCover.jpg" width="400px">
     <div class="summary">  
-    <h2>Rubix Cube</h2>  
+    <h2>Pyraminx Duo</h2>  
     <p><a href="cube.html"> View ⇒</a></p>  
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       
