--- a/html/creatures.html
+++ b/html/creatures.html
@@ -12,7 +12,8 @@
   <body>
   <image src="../images/title3.png"> <br><br>
   <h2>Ecosystem</h2> <br>
-  <script src="../java/creatures.js"></script>
+  <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-creature-comforts-and-critter-jitters/5249764491755520/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+  <!-- <script src="../java/creatures.js"></script> -->
   
   </body>
 </html>
