--- a/natural.html
+++ b/natural.html
@@ -31,7 +31,7 @@
     <p><a href="html/spaceship.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         
-    <image class="cover" src="images/fishCover.JPG">  
+    <image class="cover" src="images/paintCover.JPG">  
     <div class="summary"> 
     <h2>Paint Splatter</h2>
     <p><a href="html/paint.html"> View ⇒</a></p>
