--- a/natural.html
+++ b/natural.html
@@ -28,7 +28,7 @@
     <image class="cover" src="images/spaceshipCover.JPG">  
     <div class="summary">
     <h2>Asteriods spaceship</h2>
-    <p><a href="html/spaceship.html"> View ⇒</a></p>
+    <p><a href="html/shapeship.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         
     <image class="cover" src="images/paintCover.JPG">  
