--- a/html/shapeship.html
+++ b/html/shapeship.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
     
+     <link rel="icon" sizes="180x180" href="images/favicon/logo100.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/logo32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/logo16.png">
+    
     <style></style>
 
   </head>
@@ -21,7 +25,7 @@
     <p>     Up Arrow Key:      ???</p>
     <p>     Down Arrow Key:    ???</p><br>
     <p>I hope you like it!! </p> <br>
-    <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-asteroids-spaceship/6641240010358784/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <script src="https://www.khanacademy.org/computer-programming/spaceship-project/5051363309355008/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <!-- <script src="../java/shapeship.js"></script> -->
   
   </body>
