--- a/html.html
+++ b/html.html
@@ -20,7 +20,7 @@
     <br><br>
   <h1>Introduction to HTML and CSS</h1>
   
-    <image class="cover" src="images/recipeCover.JPG">  
+    <image class="cover" src="images/recipeCover.JPG" width="400px">  
     <div class="summary">
     <h2>Recipe Book</h2>
     <p><a href="html/recipe.html"> View ⇒</a></p>
