--- a/html/creatures.html
+++ b/html/creatures.html
@@ -12,6 +12,9 @@
   <body>
   <image src="../images/title3.png"> <br><br>
   <h2>Ecosystem</h2> <br>
+  <p>peach squids will eat plankton</p>
+  <p>leeches will follow your mouse and suck your blood!</p> <br>
+  <p>Please wait for the game to load...</p>
   <script src="https://www.khanacademy.org/computer-programming/curling-crawling-circling-creatures/6066063255552000/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <!-- <script src="../java/creatures.js"></script> -->
   
