--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="summary">  
     <h2>Intro to HTML/CSS</h2>
     <p><a href="html.html">View</a></p>
-    </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
        
     <image class="cover" src="images/creatureCover.gif"> 
     <div class="summary">
