--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <image class="cover" src="images/creatureCover.gif"> 
     <div class="summary">
     <h2>Natural Simulations</h2>
+    <p>Live coding really helped me learn how to teach. By better understanding how to teach others, I can more effectively teach myself. I also learned just how different the same language can be which prompted me to understand the code more thoroughly so that I could reproduce it in different versions of the same language (processing, p5.js, khan academy). </p>
     <p><a href="natural.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       
