--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <image class="cover" src="images/cardioidCover.gif">
     <div class="summary">
-    <h2>Live Coding</h2>
+    <h2>Live Coding!</h2>
     <p><a href="livecoding.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       
