--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     <div class="summary">
     <h2>Live Coding!</h2>
     <div class="dark">
-    <p> Live coding really helped me learn how to teach. By better understanding how to teach others, I can more effectively teach myself.</p> 
-    <p> I also learned just how different the same language can be which prompted me to understand the code more thoroughly so that I </p>
-    <p> could reproduce it in different versions of the same language (processing, p5.js, khan academy). </p>   
+    <p> Live coding really helped me learn how to teach. By better understanding how to teach others, I can more effectively teach myself. I also learned just how different the same language can be which prompted me to understand the code more thoroughly so that I could reproduce it in different versions of the same language (processing, p5.js, khan academy). </p>   
     </div>
     <p><a href="livecoding.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
