--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <image class="cover" src="images/cardioidCover.gif">
     <div class="summary">
-    <h2>Live Coding!</h2>
+    <h2>Live Coding</h2>
     <div class="dark">
     <p> Live coding really helped me learn how to teach. By better understanding how to teach others, I can more effectively teach myself. I also learned just how different the same language can be which prompted me to understand the code more thoroughly so that I could reproduce it in different versions of the same language (processing, p5.js, khan academy). </p>   
     </div>
@@ -29,6 +29,7 @@
     <div class="summary">
     <h2>Study Bunny</h2>
     <div class="dark">
+    <p> AP computer science really opened up the world of computer science outside of just regular programming. Computer science is a part of our daily lives and because of that, it is such a large field, much more than just coding. It furthered my understanding of computer science and problem-solving.</p>
     </div>
     <p><a href="study.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
