--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <image class="cover" src="images/cardioidCover.gif">
     <div class="summary">
     <h2>Live Coding</h2>
-    <div class="dark">
+    <div id="dark">
     <p> Live coding really helped me learn how to teach. By better understanding how to teach others, I can more effectively teach myself. I also learned just how different the same language can be which prompted me to understand the code more thoroughly so that I could reproduce it in different versions of the same language (processing, p5.js, khan academy). </p>   
     </div>
     <p><a href="livecoding.html"> View ⇒</a></p>
@@ -28,8 +28,7 @@
     <image class="cover" src="images/studyCover.JPG" width="400px">
     <div class="summary">
     <h2>Study Bunny</h2>
-    <div class="dark">
-    <p> AP computer science really opened up the world of computer science outside of just regular programming. Computer science is a part of our daily lives and because of that, it is such a large field, much more than just coding. It furthered my understanding of computer science and problem-solving.</p>
+    <div id="dark">
     </div>
     <p><a href="study.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -37,7 +36,7 @@
     <image class="cover" src="images/fishCover.gif">
     <div class="summary">
     <h2>Intro to JS</h2>
-    <div class="dark">
+    <div id="dark">
     </div>
     <p><a href="intro.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -45,7 +44,7 @@
     <image class="cover" src="images/recipeCover.JPG" width="400">
     <div class="summary">  
     <h2>Intro to HTML/CSS</h2>
-    <div class="dark">
+    <div id="dark">
     </div>
     <p><a href="html.html">View</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -53,7 +52,7 @@
     <image class="cover" src="images/creatureCover.gif"> 
     <div class="summary">
     <h2>Natural Simulations</h2>
-    <div class="dark">
+    <div id="dark">
     </div>
     <p><a href="natural.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -61,7 +60,7 @@
     <image class="cover" src="images/cardioidCover.gif">
     <div class="summary"> 
     <h2>Algorithms</h2>
-    <div class="dark">
+    <div id="dark">
     </div>
     <p><a href="algorithms.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -69,7 +68,7 @@
     <image class="cover" src="images/beaverCover.gif">
     <div class="summary">
     <h2>Games & Visualizations</h2>
-    <div class="dark">
+    <div id="dark">
     </div>
     <p><a href="games.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -77,7 +76,9 @@
     <image class="cover" src="images/apCover.jpg" width="400px">
     <div class="summary">
     <h2>AP Computer Science</h2>
-    <div class="dark">
+    <div id="dark">
+    <p> AP computer science really opened up the world of computer science outside of just regular programming. Computer science is a part of our daily lives and because of that, it is such a large field, much more than just coding. It furthered my understanding of computer science and problem-solving.</p>
+      
     </div>
     <p><a href="ap.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -85,7 +86,7 @@
     <image class="cover" src="images/freecodecampCover.jpg" width="400px">
     <div class="summary">   
     <h2>FreeCodeCamp</h2>
-    <div class="dark">
+    <div id="dark">
     </div>
     <p><a href="freecodecamp.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -93,7 +94,7 @@
     <image class="cover" src="images/cubeCover.jpg" width="400px">
     <div class="summary">  
     <h2>Pyraminx Duo</h2>
-    <div class="dark">
+    <div id="dark">
     </div>
     <p><a href="cube.html"> View ⇒</a></p>  
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
