--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <div class="summary">
     <h2>Natural Simulations</h2>
     <div id="dark">
+    <p>Natural Simulation taught me a lot of complicated programming concepts in simpler terms. After doing this module, I feel more confident in trying harder programming related things. Taking difficult concepts and breaking them into smaller, easier to learn pieces, makes them possible to learn. I will be able to use this skill in many places.</p>
     </div>
     <p><a href="natural.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
