--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
     <div class="summary"> 
     <h2>Algorithms</h2>
     <div id="dark">
+    <p>The algorithms course taught me about conjuring algorithms to solve problems. It strengthened my understanding of loops if statements and logic. Algorithms are used in almost every program and I will definitely be using them in the future.
+</p>
     </div>
     <p><a href="algorithms.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
