--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="summary">
     <h2>Live Coding</h2>
     <div id="dark">
-    <p> Live coding really helped me learn how to teach. By better understanding how to teach others, I can more effectively teach myself. I also learned just how different the same language can be which prompted me to understand the code more thoroughly so that I could reproduce it in different versions of the same language (processing, p5.js, khan academy). </p>   
+    <p> Live coding really helped me learn how to teach. By better understanding how to teach others, I can more effectively teach myself. I also learned just how different the same language can be which prompted me to understand the code more thoroughly so that I could reproduce it in different versions of the same language (processing, p5.js, khan academy). It also helped me strengthen my understanding of object-oriented code. I can now confidently make and manipulate objects. </p>   
     </div>
     <p><a href="livecoding.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -72,6 +72,8 @@
     <div class="summary">
     <h2>Games & Visualizations</h2>
     <div id="dark">
+    <p>The games and visualizations course taught me how to create and manipulate objects. Object-oriented programing is used everywhere and it makes many of the things we use easier/possible to code. After doing this module, I understood the basics of object-oriented programming. When I code a game I’ll be using object-oriented programing to make things more efficient.
+</p>
     </div>
     <p><a href="games.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
