--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <div class="summary">  
     <h2>Pyraminx Duo</h2>
     <div id="dark">
+    <p>Cubing, helped me understand algorithms and problem-solving. In a way cubing can represent the building blocks of understanding code. You need to be able to solve problems, understand algorithms, be able to teach yourself, be able to communicate with a team and teach others, and cubing teaches us all that.</p>
     </div>
     <p><a href="cube.html"> View ⇒</a></p>  
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
