--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div class="summary">
     <h2>Study Bunny</h2>
     <div id="dark">
+      <p>The hackathon taught me how to work with a team on a project from scratch. Most programing in school is done individually while in the real world, programming is often done in groups. I learned just how important version control is, especially the bigger your group or project gets. This module also helped strengthen my HTML skills and I was able to use my resources (khan academy, freecodecamp, etc) to solve the problems I was facing.</p>
     </div>
     <p><a href="study.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
