--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <div class="summary">   
     <h2>FreeCodeCamp</h2>
     <div id="dark">
+    <p>Freecodecamp was very useful for learning HTML and CSS. Everything was broken down into very small lessons. By seeing this format I am able to break down other problems I face in the same way that freecodecamp did. Using this I can solve problems and learn independently which is a skill that is very beneficial for both coding and non-coding purposes.</p>
     </div>
     <p><a href="freecodecamp.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
