--- a/ap.html
+++ b/ap.html
@@ -19,8 +19,8 @@
   <br><br>
   <h1>Advanced Placement Computer Science</h1>
   <br>
-  <img id="bigImage" src="images/khanacademy.JPG">
-
+  <img id="bigImage" src="images/ap1.JPG">
+  <img id="bigImage" src="images/ap2.JPG">
   
   </body>
   </head>
