--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div class="summary">
     <h2>Intro to JS</h2>
     <div id="dark">
+    <p>Intro to javascript taught me the basics of javascript. In addition to that it served as a good refresher for the basics of coding that we learned in grade 10 and 11. It also made me realize how art can help get people interested in learning to code. As an artist myself, I may try using code to produce artwork in the future.</p>
     </div>
     <p><a href="intro.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -46,6 +47,7 @@
     <div class="summary">  
     <h2>Intro to HTML/CSS</h2>
     <div id="dark">
+    <p>Intro to HTML/CSS taught me how to build a website from scratch. This module introduced us to many resources, such as github. I plan on using this portfolio I have made, and expanding on it. I'll have to furthur my knowledge of HTML/CSS of I wish to do so.</p>
     </div>
     <p><a href="html.html">View</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
