--- a/algorithms.html
+++ b/algorithms.html
@@ -24,7 +24,7 @@
     <div class="summary">
     <h2>Recursive Art</h2>
     <p><a href="html/art.html"> View ⇒</a></p>
-    </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   
     <image class="cover" src="images/sortCover.JPG">  
     <div class="summary">  
