--- a/games.html
+++ b/games.html
@@ -23,7 +23,7 @@
     <div class="summary">
     <h2>Beaver Game</h2>
     <p><a href="html/beaver.html"> View ⇒</a></p>
-    </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       
     <image class="cover" src="images/memoryCover.gif">  
     <div class="summary">
