--- a/livecoding.html
+++ b/livecoding.html
@@ -23,7 +23,7 @@
     <div class="summary">
     <h2>Cardioid Visualization</h2>
     <p><a href="html/cardioid.html"> View ⇒</a></p>
-    </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       
     <image class="cover" src="images/roseCover.JPG" width="400px">  
     <div class="summary">
