--- a/natural.html
+++ b/natural.html
@@ -23,13 +23,13 @@
     <div class="summary">
     <h2>Creatures</h2>
     <p><a href="html/creatures.html"> View ⇒</a></p>
-    </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         
     <image class="cover" src="images/spaceshipCover.JPG">  
     <div class="summary">
     <h2>Asteriods spaceship</h2>
     <p><a href="html/shapeship.html"> View ⇒</a></p>
-    </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         
     <image class="cover" src="images/paintCover.JPG">  
     <div class="summary"> 
