--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>   
     <image src="images/title2.png"> <br><br>
     
-    <image class="cover" src="images/cardioidCover.gif">
+    <a href="livecoding.html"><image class="cover" src="images/cardioidCover.gif"></a>
     <div class="summary">
     <h2>Live Coding</h2>
     <div id="dark">
