--- a/algorithms.html
+++ b/algorithms.html
@@ -20,13 +20,13 @@
   <h1>Algorithms</h1>
   <br>
     
-    <image class="cover" src="images/fishCover.gif">  
+    <a href="html/art.html"><image class="cover" src="images/fishCover.gif"></a> 
     <div class="summary">
     <h2>Recursive Art</h2>
     <p><a href="html/art.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   
-    <image class="cover" src="images/sortCover.JPG">  
+    <a href="html/sort.html"><image class="cover" src="images/sortCover.JPG"> </a>
     <div class="summary">  
     <h2>Selection Sort</h2>
     <p><a href="html/sort.html"> View ⇒</a></p>
