--- a/games.html
+++ b/games.html
@@ -14,18 +14,18 @@
 
   </head>
   <body>
-    <image src="images/title3.png"> 
+    <a href="index.html"><image src="images/title3.png"></a>
   <br><br>
     <h1>Games & Visualization</h1>
   <br>
     
-    <image class="cover" src="images/beaverCover.gif">  
+    <a href="html/beaver.html"><image class="cover" src="images/beaverCover.gif"> </a>
     <div class="summary">
     <h2>Beaver Game</h2>
     <p><a href="html/beaver.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       
-    <image class="cover" src="images/memoryCover.gif">  
+    <a href="html/memory.html"><image class="cover" src="images/memoryCover.gif"> </a> 
     <div class="summary">
     <h2>Memory Game</h2>
     <p><a href="html/memory.html"> View ⇒</a></p>
