--- a/algorithms.html
+++ b/algorithms.html
@@ -15,7 +15,7 @@
 
   </head>
   <body>
-  <image src="images/title3.png">  
+  <a href="index.html"> <image src="images/title3.png">  </a>
   <br><br>
   <h1>Algorithms</h1>
   <br>
