--- a/html.html
+++ b/html.html
@@ -16,11 +16,11 @@
 
   </head>
   <body>
-    <image src="images/title3.png"> 
+    <a href="index.html"><image src="images/title3.png"> </a>
     <br><br>
   <h1>Introduction to HTML and CSS</h1>
   
-    <image class="cover" src="images/recipeCover.JPG" width="400px">  
+    <a href="html/recipe.html"><image class="cover" src="images/recipeCover.JPG" width="400px">  </a>
     <div class="summary">
     <h2>Recipe Book</h2>
     <p><a href="html/recipe.html"> View ⇒</a></p>
