--- a/livecoding.html
+++ b/livecoding.html
@@ -14,18 +14,18 @@
 
   </head>
   <body>
-    <image src="images/title3.png"> 
+    <a href="index.html"><image src="images/title3.png"> </a>
     <br><br>
     <h1>Live Coding Refactors</h1>
     <br>
     
-    <image class="cover" src="images/cardioidCover.gif">  
+    <a href="html/cardioid.html"><image class="cover" src="images/cardioidCover.gif">  </a>
     <div class="summary">
     <h2>Cardioid Visualization</h2>
     <p><a href="html/cardioid.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       
-    <image class="cover" src="images/roseCover.JPG" width="400px">  
+    <a href="html/rose.html"><image class="cover" src="images/roseCover.JPG" width="400px">  </a>
     <div class="summary">
     <h2>Rose Art</h2>
     <p><a href="html/rose.html"> View ⇒</a></p>
