--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <p><a href="natural.html"> View ⇒</a></p>
     </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       
-    <a href="algorithms.html"><image class="cover" src="images/cardioidCover.gif"></a>
+    <a href="algorithms.html"><image class="cover" src="images/artCover.JPG"></a>
     <div class="summary"> 
     <h2>Algorithms</h2>
     <div id="dark">
