--- a/algorithms.html
+++ b/algorithms.html
@@ -20,7 +20,7 @@
   <h1>Algorithms</h1>
   <br>
     
-    <a href="html/art.html"><image class="cover" src="images/fishCover.gif"></a> 
+    <a href="html/art.html"><image class="cover" src="images/artCover.JPG"></a> 
     <div class="summary">
     <h2>Recursive Art</h2>
     <p><a href="html/art.html"> View ⇒</a></p>
