--- a/html/ball.html
+++ b/html/ball.html
@@ -13,7 +13,7 @@
   <body>
   <image src="../images/title3.png"> <br><br>
     <h2>Magic 8 Ball</h2> <br>
-    <script src="../java/ball.js"></script>
+    <script src="https://www.khanacademy.org/computer-programming/magic-8-ball/5936963215966208/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
   
   </body>
 </html>
