--- a/html/rain.html
+++ b/html/rain.html
@@ -13,7 +13,7 @@
   <body>
   <image src="../images/title3.png"> <br><br>
     <h2>Make it rain!</h2> <br>
-    <script src="https://www.khanacademy.org/computer-programming/spin-off-of-project-make-it-rain/6269897398517760/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+    <script src="https://www.khanacademy.org/computer-programming/make-it-rain/4516291180773376/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
    <!-- <script src="../java/rain.js"></script> -->
   
   </body>
