--- a/html/recipe.html
+++ b/html/recipe.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
+         <link rel="icon" sizes="180x180" href="images/favicon/logo100.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/logo32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/logo16.png">
+        
         <style>
             body {
                 background-color: rgb(250, 235, 213);
